--- a/ev-winners.ipynb
+++ b/ev-winners.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "3ed3e51c-28f6-4a14-88c0-c4d15822e539",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "id": "60161ccb-22c2-4bcc-a39e-2148fdef16e6",
    "metadata": {},
    "outputs": [
@@ -84,11 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "id": "d3e06cb5-e609-448f-93de-ff2861d28952",
    "metadata": {},
    "outputs": [],
    "source": [
+    "names = df['name'].to_numpy()\n",
     "descriptions = df['description'].to_numpy()\n",
     "# generate embeddings of the descriptions\n",
     "embeddings = model.encode(descriptions)"
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "id": "804ee34c-9c83-44e9-91a1-324e0492272f",
    "metadata": {},
    "outputs": [],
@@ -114,7 +115,7 @@
     "    # Add all pairs to a list with their cosine similarity score\n",
     "    all_sentence_combinations = []\n",
     "    for i in range(len(cos_sim)-1):\n",
-    "        all_sentence_combinations.append([cos_sim[i], descriptions[i]])\n",
+    "        all_sentence_combinations.append([cos_sim[i], descriptions[i], names[i]])\n",
     "    \n",
     "    # Sort list by the highest cosine similarity score\n",
     "    all_sentence_combinations = sorted(all_sentence_combinations, key=lambda x: x[0][0], reverse=True)\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 11,
    "id": "421f05e4-9c03-4701-9fac-6d7d300c18a2",
    "metadata": {},
    "outputs": [
@@ -134,16 +135,16 @@
      "text": [
       "Top 10 matches for query: book\n",
       "\n",
-      "1. San Francisco, to support his project to reexamine and fundamentally improve the book as a method for learning and absorbing ideas, Twitter here. Here is his essay on why books do not work.\n",
-      "2. Kathleen Harward, to write and market a series of children’s books based on classical liberal values.\n",
-      "3. Sonja Trauss of YIMBY, assistance to publish Nicholas Barbon, A Defence of the Builder.\n",
-      "4. Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
-      "5. Jeffrey C. Huber, to write a book on tech and economic progress from a Christian point of view.\n",
-      "6. Joe Francis, a farmer in Wales, to write a book on the economic and historical import of slavery in the American republic.\n",
-      "7. Tony Morley, Progress Studies fellow, from Ngunnawal, Australia, to write the first optimistic children’s book on progress.\n",
-      "8. Henry Oliver, London, to write a book on talent and late bloomers. Substack here.\n",
-      "9. Yuen Yuen Ang, political scientist at the University of Michigan, from Singapore, to write a new book on disruption.\n",
-      "10. John Durant, for career development and writing, and explorations into notions of angels.\n"
+      "1. Andy Matuschak: San Francisco, to support his project to reexamine and fundamentally improve the book as a method for learning and absorbing ideas, Twitter here. Here is his essay on why books do not work.\n",
+      "2. Kathleen Harward: Kathleen Harward, to write and market a series of children’s books based on classical liberal values.\n",
+      "3. Sonja Trauss: Sonja Trauss of YIMBY, assistance to publish Nicholas Barbon, A Defence of the Builder.\n",
+      "4. Marc Sidwell: Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
+      "5. Jeffrey C. Huber: Jeffrey C. Huber, to write a book on tech and economic progress from a Christian point of view.\n",
+      "6. Joe Francis: Joe Francis, a farmer in Wales, to write a book on the economic and historical import of slavery in the American republic.\n",
+      "7. Tony Morley: Tony Morley, Progress Studies fellow, from Ngunnawal, Australia, to write the first optimistic children’s book on progress.\n",
+      "8. Henry Oliver: Henry Oliver, London, to write a book on talent and late bloomers. Substack here.\n",
+      "9. Yuen Yuen Ang: Yuen Yuen Ang, political scientist at the University of Michigan, from Singapore, to write a new book on disruption.\n",
+      "10. John Durant: John Durant, for career development and writing, and explorations into notions of angels.\n"
      ]
     }
    ],
@@ -151,7 +152,7 @@
     "def search_ev_winners(query, number):\n",
     "    print(f\"Top {number} matches for query: {query}\\n\")\n",
     "    for index, item in enumerate(get_ev_winners(query)[:number], start=1):\n",
-    "        print(f\"{index}. {item[1]}\")\n",
+    "        print(f\"{index}. {item[2]}: {item[1]}\")\n",
     "\n",
     "search_ev_winners(\"book\", 10)"
    ]
