add embedding col to dataset

--- a/ev-winners.ipynb
+++ b/ev-winners.ipynb
@@ -84,20 +84,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d3e06cb5-e609-448f-93de-ff2861d28952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-8.9191841e-03  8.1923462e-02  8.2692392e-03 ... -8.1706204e-04\n",
+      "  -5.8404645e-03 -2.4727663e-02]\n",
+      " [ 3.4100588e-02  1.2999950e-01 -1.6341692e-02 ...  2.1348594e-02\n",
+      "   4.1852508e-02  3.3572470e-03]\n",
+      " [-3.3777144e-02  1.5727529e-01 -2.0336600e-02 ...  1.1649110e-02\n",
+      "   2.6833998e-02 -9.8458026e-03]\n",
+      " ...\n",
+      " [ 6.4019270e-02 -1.0361400e-02 -8.6139077e-03 ... -1.8746321e-04\n",
+      "  -2.7924933e-02  7.0708070e-04]\n",
+      " [ 3.4342300e-02 -4.6487272e-02  3.1901367e-05 ... -2.8234329e-02\n",
+      "   2.5776003e-02 -3.5039790e-02]\n",
+      " [ 4.9569044e-02  2.0383047e-02  3.1445692e-03 ... -2.9717339e-02\n",
+      "   2.2790560e-02 -2.9443244e-02]]\n"
+     ]
+    }
+   ],
    "source": [
     "names = df['name'].to_numpy()\n",
     "descriptions = df['description'].to_numpy()\n",
     "# generate embeddings of the descriptions\n",
-    "embeddings = model.encode(descriptions)"
+    "embeddings = model.encode(descriptions)\n",
+    "print(embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "id": "8f56dafe-bb97-421d-b766-8bfd33b125c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame with embeddings has been saved to 'ev-winners-with-embeddings.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write new dataset\n",
+    "\n",
+    "df['embedding_description'] = embeddings.tolist()\n",
+    "output_csv_path = 'ev-winners-with-embeddings.csv'\n",
+    "df.to_csv(output_csv_path, index=False)\n",
+    "print(f\"DataFrame with embeddings has been saved to '{output_csv_path}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "804ee34c-9c83-44e9-91a1-324e0492272f",
    "metadata": {},
    "outputs": [],
@@ -125,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "421f05e4-9c03-4701-9fac-6d7d300c18a2",
    "metadata": {},
    "outputs": [
@@ -137,14 +181,14 @@
       "\n",
       "1. Andy Matuschak: San Francisco, to support his project to reexamine and fundamentally improve the book as a method for learning and absorbing ideas, Twitter here. Here is his essay on why books do not work.\n",
       "2. Kathleen Harward: Kathleen Harward, to write and market a series of children’s books based on classical liberal values.\n",
-      "3. Sonja Trauss: Sonja Trauss of YIMBY, assistance to publish Nicholas Barbon, A Defence of the Builder.\n",
-      "4. Marc Sidwell: Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
-      "5. Jeffrey C. Huber: Jeffrey C. Huber, to write a book on tech and economic progress from a Christian point of view.\n",
-      "6. Joe Francis: Joe Francis, a farmer in Wales, to write a book on the economic and historical import of slavery in the American republic.\n",
-      "7. Tony Morley: Tony Morley, Progress Studies fellow, from Ngunnawal, Australia, to write the first optimistic children’s book on progress.\n",
-      "8. Henry Oliver: Henry Oliver, London, to write a book on talent and late bloomers. Substack here.\n",
-      "9. Yuen Yuen Ang: Yuen Yuen Ang, political scientist at the University of Michigan, from Singapore, to write a new book on disruption.\n",
-      "10. John Durant: John Durant, for career development and writing, and explorations into notions of angels.\n"
+      "3. Jeremy Stern: Glendale, CA, Tablet magazine. To write a book.\n",
+      "4. Sonja Trauss: Sonja Trauss of YIMBY, assistance to publish Nicholas Barbon, A Defence of the Builder.\n",
+      "5. Marc Sidwell: Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
+      "6. Jasmine Wang and team (Jasmine is a repeat winner): Trellis, AI and the book.\n",
+      "7. Jeffrey C. Huber: Jeffrey C. Huber, to write a book on tech and economic progress from a Christian point of view.\n",
+      "8. Joe Francis: Joe Francis, a farmer in Wales, to write a book on the economic and historical import of slavery in the American republic.\n",
+      "9. Cynthia Haven: Cynthia Haven, Stanford University, to write a book on John Milton and the 17th century. Twitter here.\n",
+      "10. Benjamin Schneider: Brooklyn. To write a book on the new urbanism.\n"
      ]
     }
    ],
