data refresh + update model to all-MiniLM-L6-v2 to reduce bundle size

--- a/scripts/ev-winners.ipynb
+++ b/scripts/ev-winners.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
-    "model = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')"
+    "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
    ]
   },
   {
@@ -93,19 +93,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.02197496  0.10281961  0.02483279 ... -0.02141342  0.02712192\n",
-      "  -0.02306103]\n",
-      " [ 0.03410059  0.1299995  -0.01634169 ...  0.02134859  0.04185251\n",
-      "   0.00335725]\n",
-      " [-0.03377714  0.15727529 -0.0203366  ...  0.01164911  0.026834\n",
-      "  -0.0098458 ]\n",
+      "[[-0.05316222  0.08313879 -0.00018972 ... -0.02911166 -0.05182787\n",
+      "  -0.04559411]\n",
+      " [ 0.00656217  0.01479886 -0.01363882 ... -0.01856913 -0.10103376\n",
+      "   0.02289294]\n",
+      " [ 0.08496379  0.05712386 -0.01860134 ...  0.05476078 -0.00237706\n",
+      "  -0.04405489]\n",
       " ...\n",
-      " [-0.00886744  0.00242994 -0.01559558 ...  0.01800337 -0.01558605\n",
-      "  -0.0517554 ]\n",
-      " [-0.03882203  0.01288104  0.0256179  ... -0.02596244  0.00511641\n",
-      "  -0.03354771]\n",
-      " [ 0.00740263  0.03701109 -0.00992012 ...  0.01027744 -0.00093758\n",
-      "  -0.04171489]]\n"
+      " [-0.02717686  0.03089065  0.02796888 ... -0.02674641 -0.01135708\n",
+      "   0.06989009]\n",
+      " [-0.08260766  0.05114881  0.00184061 ...  0.00910514 -0.02419201\n",
+      "   0.00591901]\n",
+      " [-0.01491736  0.01335617 -0.06053676 ... -0.11592133  0.08571236\n",
+      "  -0.04570728]]\n"
      ]
     }
    ],
@@ -181,15 +181,15 @@
       "Top 10 matches for query: book\n",
       "\n",
       "1. Andy Matuschak: San Francisco, to support his project to reexamine and fundamentally improve the book as a method for learning and absorbing ideas, Twitter here. Here is his essay on why books do not work.\n",
-      "2. Kathleen Harward: Kathleen Harward, to write and market a series of children’s books based on classical liberal values.\n",
-      "3. Jeremy Stern: Glendale, CA, Tablet magazine. To write a book.\n",
-      "4. Sonja Trauss: Sonja Trauss of YIMBY, assistance to publish Nicholas Barbon, A Defence of the Builder.\n",
-      "5. Marc Sidwell: Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
-      "6. Jasmine Wang and team (Jasmine is a repeat winner): Trellis, AI and the book.\n",
+      "2. Jeremy Stern: Glendale, CA, Tablet magazine. To write a book.\n",
+      "3. Jasmine Wang and team (Jasmine is a repeat winner): Trellis, AI and the book.\n",
+      "4. Marc Sidwell: Marc Sidwell of the United Kingdom, to write a book on common sense.\n",
+      "5. Henry Oliver: Henry Oliver, London, to write a book on talent and late bloomers. Substack here.\n",
+      "6. Byrne Hobart: Byrne Hobart, to write a book on technological progress with Tobias Huber.\n",
       "7. Jeffrey C. Huber: Jeffrey C. Huber, to write a book on tech and economic progress from a Christian point of view.\n",
-      "8. Klara Feenstra: Klara Feenstra, London, to write a novel about the tensions between Catholicism and modern life.\n",
-      "9. Joe Francis: Joe Francis, a farmer in Wales, to write a book on the economic and historical import of slavery in the American republic.\n",
-      "10. Cynthia Haven: Cynthia Haven, Stanford University, to write a book on John Milton and the 17th century. Twitter here.\n"
+      "8. Matt Faherty: Matt Faherty, to study and write about the NIH.\n",
+      "9. Yuen Yuen Ang: Yuen Yuen Ang, political scientist at the University of Michigan, from Singapore, to write a new book on disruption.\n",
+      "10. Kathleen Harward: Kathleen Harward, to write and market a series of children’s books based on classical liberal values.\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "86842b34-5362-4ad2-939a-fcac0126908b",
    "metadata": {},
    "outputs": [
@@ -231,10 +231,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "85081543-cd9f-4985-83f4-cde0078e8096",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The Jupyter server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--ServerApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "ServerApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "first_5_records = json_blob.split('\\n')[:5]\n",
     "\n",
